--- a/src/DeveloperExceptionJsonResponse/DeveloperExceptionJsonResponse.csproj
+++ b/src/DeveloperExceptionJsonResponse/DeveloperExceptionJsonResponse.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageId>Class-Lib-DotNet-Standard</PackageId>
     <PackageTags>aspnetcore</PackageTags>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
@@ -23,5 +24,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    ...
+    <None Include="./README.md" Pack="true" PackagePath="./"/>
+    ...
   </ItemGroup>
 </Project>
