--- a/src/DeveloperExceptionJsonResponse/DeveloperExceptionJsonResponse.csproj
+++ b/src/DeveloperExceptionJsonResponse/DeveloperExceptionJsonResponse.csproj
@@ -26,6 +26,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="../README.md" Pack="true" PackagePath="/"/>
+    <None Include="../../README.md" Pack="true" PackagePath="/"/>
   </ItemGroup>
 </Project>
