--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,13 @@ on:
   workflow_dispatch:
     
   push:
-    branches: [ master ]
+    branches: 
+      - master
+      - release/*
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - release/*
 
 defaults:
   run:
